--- a/practical1/cssex.html
+++ b/practical1/cssex.html
@@ -25,6 +25,7 @@
             font-family: Arial;
             font-weight: bold;
             padding-top: 100px;
+            text-decoration: underline;
         }
         #direction{
             direction: rtl;
